# Windows-Reverse-Learning

Game-Memory-Analysis/PvZ_Memory_Tool/: CMakeLists.txt  LICENSE  README.md
Game-Memory-Analysis/PvZ_Memory_Tool/docs/: analysis_report.md  win32_api_notes.md
Game-Memory-Analysis/PvZ_Memory_Tool/docs/screenshots/: README.md
Game-Memory-Analysis/PvZ_Memory_Tool/src/: main.cpp  memory_helper.cpp  memory_helper.h  offsets.h  patch_engine.cpp  patch_engine.h
Game-Memory-Analysis/PvZ_Memory_Tool/tests/: test_memory_read.cpp
Game-Memory-Analysis/PvZ_Memory_Tool/tools/: find_offset.py
Game-Memory-Analysis/minesweeper/: README.md
Game-Memory-Analysis/minesweeper/analysis/: offsets.md
Game-Memory-Analysis/minesweeper/src/: MainDialog.cpp  MainDialog.h  MemoryReader.cpp  MemoryReader.h  resource.h
PE-Parser/: CMakeLists.txt  README.md
PE-Parser/include/: console.h  pe_common.h  pe_parser.h
PE-Parser/src/: console.cpp  main.cpp  pe_common.cpp  pe_dos.cpp  pe_export.cpp  pe_import.cpp  pe_info.cpp  pe_nt.cpp  pe_parser.cpp  pe_relocation.cpp  pe_section.cpp
Unpacking/ASPack/: ASPack_Unpacking_Analysis.md
Unpacking/UPX/: ANALYSIS.md  README.md  脱壳结果总结.md
